Edit openapi for questions
